--- a/package.json
+++ b/package.json
@@ -14,13 +14,16 @@
   "author": "Raúl Armas",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.1",
     "connect": "^3.7.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.17.2",
+    "express-validator": "^7.0.1",
     "mongoose": "^6.1.7"
   },
   "devDependencies": {
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.22"
   }
 }
