--- a/package.json
+++ b/package.json
@@ -15,15 +15,16 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
-    "body-parser": "^1.19.1",
+    "body-parser": "^1.20.2",
     "connect": "^3.7.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "express": "^4.17.2",
+    "express": "^4.18.2",
     "express-validator": "^7.0.1",
-    "mongoose": "^6.1.7"
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^7.5.1"
   },
   "devDependencies": {
-    "nodemon": "^2.0.22"
+    "nodemon": "^3.0.1"
   }
 }
