--- a/package.json
+++ b/package.json
@@ -1,30 +1,39 @@
 {
-   "name": "TantooServiceRestNode",
-   "version": "1.0.0",
-   "description": "app sample service",
-   "main": "index.js",
-   "scripts": {
-      "test": "echo \"Error: no test specified\" && exit 1",
-      "start": "nodemon index.js"
-   },
-   "repository": {
-      "type": "git",
-      "url": "https://github.com/RaulArmasBenavides/TantooServiceRestNode"
-   },
-   "author": "Raúl Armas",
-   "license": "ISC",
-   "dependencies": {
-      "bcryptjs": "^3.0.2",
-      "body-parser": "^2.2.0",
-      "connect": "^3.7.0",
-      "cors": "^2.8.5",
-      "dotenv": "^16.5.0",
-      "express": "^5.1.0",
-      "express-validator": "^7.2.1",
-      "jsonwebtoken": "^9.0.2",
-      "mongoose": "^8.16.0"
-   },
-   "devDependencies": {
-      "nodemon": "^3.1.10"
-   }
+  "name": "TantooServiceRestNode",
+  "version": "1.0.0",
+  "description": "app sample service",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon dist/index.js",
+    "build": "tsc",
+    "typecheck": "tsc --noEmit"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/RaulArmasBenavides/TantooServiceRestNode"
+  },
+  "author": "Raúl Armas",
+  "license": "ISC",
+  "dependencies": {
+    "bcryptjs": "^3.0.2",
+    "body-parser": "^2.2.0",
+    "connect": "^3.7.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.5.0",
+    "express": "^5.1.0",
+    "express-validator": "^7.2.1",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.16.0"
+  },
+  "devDependencies": {
+    "@types/cors": "^2.8.19",
+    "@types/express": "^5.0.5",
+    "@types/jsonwebtoken": "^9.0.10",
+    "@types/node": "^24.10.0",
+    "nodemon": "^3.1.10",
+    "prettier": "^3.6.2",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.9.3"
+  }
 }
