--- a/package.json
+++ b/package.json
@@ -24,11 +24,14 @@
     "express": "^5.1.0",
     "express-fileupload": "^1.5.2",
     "express-validator": "^7.3.1",
+    "express-expeditious": "^5.1.1",
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
     "mongoose": "^8.20.0",
+    "morgan": "^1.10.0",
+    "winston": "^3.17.0",
     "uuid": "^13.0.0"
   },
   "devDependencies": {
