--- a/package.json
+++ b/package.json
@@ -18,21 +18,23 @@
   "dependencies": {
     "bcryptjs": "^3.0.3",
     "body-parser": "^2.2.0",
+    "compression": "^1.8.1",
     "connect": "^3.7.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "express-expeditious": "^5.1.1",
     "express-fileupload": "^1.5.2",
     "express-validator": "^7.3.1",
-    "express-expeditious": "^5.1.1",
+    "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
-    "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.1",
     "mongoose": "^8.20.0",
     "morgan": "^1.10.0",
-    "winston": "^3.17.0",
-    "uuid": "^13.0.0"
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
+    "uuid": "^13.0.0",
+    "winston": "^3.17.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.19",
